# synapse

./: Cargo.toml  graph.json  readme.md
src/: lib.rs  main.rs
src/cli/: commands.rs  mod.rs  tui.rs
src/models/: edge.rs  graph.rs  mod.rs  node.rs
src/storage/: file_storage.rs
