[package]
name = "synapse"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.11", feaures = ["serde"], features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4"] }
ratatui = "0.29.0"
crossterm = "0.29.0"
